--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,9 +1,50 @@
-html{
-    box-sizing: border-box;
-}
-*,
-*::before,
-*::after{
-    box-sizing: inherit;
-}
+@import 'vars';
+@import 'global';
+@import 'fonts';
 
+.header__top-inner{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 90px;
+}
+.header__text{
+    margin-left: auto;
+    margin-right: 50px;
+    span{
+        color: $red;
+    }
+}
+.header__btn{
+    width: 72px;
+    padding: 4px 9px;
+    border-radius: 4px;
+    color: #fff;
+    text-align: center;
+    font-size: 12px;
+    &-login{
+        background-color: $green;
+    }
+    &-register{
+        background-color: $red;
+        margin-left: 7px;    
+    }
+}
+.header__menu{
+    background-color: $bg-blue;
+}
+.menu{
+    display: flex;
+    align-items: center;
+    height: 60px;
+    color: #fff;
+    font-size: 14px;
+    &__list{
+        li{
+            display: inline-block;
+            & + li{
+                margin-left: 30px;
+            }
+        }
+    }
+}
