--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -68,13 +68,13 @@
     &-title{
         margin-bottom: 10px;
         font-size: 48px;
-        font-weight: 700;
+        @include f700;
         line-height: 72px;
     }
     &-text{
         margin-bottom: 50px;
         font-size: 20px;
-        font-weight: 500;
+        @include f500;
         line-height: 30px;
     }
     &-form{
@@ -89,12 +89,12 @@
             height: 56px;
             border: none;
             font-size: 14px;
-            font-weight: 500;
+            @include f500;
             padding-left: 25px;
             padding-right: 60px;
             &::placeholder{
                 color: #90a4ae;
-                font-weight: 500;
+                @include f500;
             }
         }
         button{
@@ -158,7 +158,7 @@
         padding: 10px 30px;
         align-items: center;
         min-height: 90px;
-        font-weight: 500;
+        @include f500;
         border-bottom: 1px solid #e7ecf2;
     }
     &-name{
@@ -177,7 +177,7 @@
     &-price{
         font-size: 20px;
         color: $bg-blue;
-        font-weight: 700;
+        @include f700;
     }
     &-info{
         display: flex;
@@ -192,7 +192,7 @@
         max-width: 245px;
         span{
             font-size: 14px;
-            font-weight: 500;
+            @include f500;
         }
         .avatar{
             width: 30px;
@@ -258,5 +258,54 @@
     }
 }
 
-
 //end products-slider
+
+//start advantages
+
+.advantages{
+    background-color: $bg-blue;
+    padding: 110px 0;
+}
+.advantages__title{
+    color: #fff;
+}
+.advantages__inner{
+    display: flex;
+    justify-content: space-between;
+}
+.advantages__item{
+    max-width: 370px;
+    text-align: center;
+    padding: 0 15px;
+    &:hover{
+        .advantages__item-title{
+            color: $green;
+        }
+        .advantages__item-img{
+            background-color: $green;
+        }
+    }
+    &-img{
+        width: 114px;
+        height: 114px;
+        background-color: #fff;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto 30px;
+        transition: all .5s;
+    }
+    &-title{
+        color: #fff;
+        font-size: 24px;
+        @include f500;
+        margin-bottom: 25px;
+        transition: all .5s;
+    }
+    &-text{
+        font-size: 15px;
+    }
+}
+
+//end advantages
