added page new-items

--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -54,3 +54,21 @@
 .icon-location-arrow:before {
   content: "\f124";
 }
+.icon-search:before {
+  content: "\f002";
+}
+.icon-th-large:before {
+  content: "\f009";
+}
+.icon-th-list:before {
+  content: "\f00b";
+}
+.icon-sort:before {
+  content: "\f0dc";
+}
+.icon-unsorted:before {
+  content: "\f0dc";
+}
+.icon-sort-amount-desc:before {
+  content: "\f161";
+}
