--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -60,6 +60,15 @@
     background-repeat: no-repeat;
     background-position: center;
     min-height: 535px;
+    &.page-search{
+        min-height: 230px;
+        .search__inner{
+            padding: 55px 0 70px;
+            &-text{
+                margin-bottom: 20px;
+            }
+        }
+    }
 }
 .search__inner{
     padding: 160px 0 100px;
@@ -195,7 +204,7 @@
             @include f500;
         }
         .avatar{
-            width: 30px;
+            min-width: 30px;
             height: 30px;
             border-radius: 50%;
             background-position: center;
@@ -532,3 +541,267 @@
 }
 
 //end footer
+
+
+//products-page
+
+
+//start products-page
+
+.products-page__inner{
+    display: flex;
+    padding-bottom: 110px;
+}
+.products-page__aside{
+    margin-right: 30px;
+}
+.aside-item{
+    background-color: #fff;
+    border: 1px solid #dedede;
+    padding: 0 32px 32px;
+    margin-bottom: 30px;
+    width: 270px;
+}
+.aside__title{
+    border-bottom: 1px solid #dde3e8;
+    font-size: 20px;
+    color: $bg-blue;
+    @include f700;
+    padding: 20px 0;
+}
+.category__list{
+    padding-top: 10px;
+    li{
+        display: flex;
+        justify-content: space-between;
+        position: relative;
+        padding: 10px 0 0 20px;
+        &::before{
+            content: "\f105";
+            color: #8bc34a;
+            position: absolute;
+            left: 0;
+            font-size: 18px;
+            font-family: 'icomoon';
+        }
+    }
+    a{
+        color: $bg-blue;
+    }
+    span{
+        color: #90a4ae;
+        margin-left: 10px;
+    }
+}
+.price-range{
+    form{
+        padding-top: 20px;
+    }
+    button{
+        margin-top: 55px;
+        padding: 16px 10px;
+        background-color: $green;
+        text-align: center;
+        color: #fff;
+        @include f500;
+        border: none;
+        width: 100%;
+        display: block;
+        cursor: pointer;
+        position: relative;
+        &::before{
+            content: "\f002";
+            position: absolute;
+            font-family: 'icomoon';
+            top: 15px;
+            font-size: 15px;
+            left: 58px;
+            color: #fff;
+        }
+    }
+}
+.irs-min,
+.irs-max{
+    display: none;
+}
+.irs--flat .irs-line{
+    background-color: #f2f5f8;
+    height: 5px;
+}
+.irs--flat .irs-bar{
+    background-color: $bg-blue;
+    height: 5px;
+}
+.irs--flat .irs-handle{
+    width: 16px;
+    height: 16px;
+    border: 4px solid $green;
+    background-color: #fff;
+    border-radius: 50%;
+}
+.irs--flat .irs-handle>i:first-child{
+    display: none;
+}
+.irs-from, .irs-single, .irs-to{
+    top: 45px;
+}
+.irs--flat .irs-from:before, .irs--flat .irs-single:before, .irs--flat .irs-to:before{
+    display: none;
+}
+.irs--flat .irs-from, .irs--flat .irs-single, .irs--flat .irs-to{
+    color: #78909c;
+    font-size: 15px;
+    background: none;
+}
+.irs--flat .irs-handle{
+    top: 19px;
+}
+.products-page__aside{
+    .products__item{
+        box-shadow: none;
+        padding-bottom: 30px;
+        margin-bottom: 30px;
+        border-bottom: 1px solid #dde3e8;
+        &-img{
+            min-height: 120px;
+        }
+        &-content{
+            padding: 0;
+            min-height: 75px;
+            border-bottom: none;
+        }
+        &-info{
+            padding: 0;
+            min-height: 0;
+        }
+        &-title{
+            font-size: 16px;
+        }
+        &-price{
+            font-size: 16px;
+        }
+        &-starnum{
+            display: none;
+        }
+        &-author .avatar{
+            margin-right: 9px;
+        }
+        .jq-ry-container{
+            padding: 0;
+        }
+    }
+    .rate-star{
+        margin-right: 0;
+    }
+}
+.aside__products-item{
+    .products__item:last-child{
+        border-bottom: none;
+        padding-bottom: 0;
+    }
+    .products__item:first-child{
+        margin-top: 25px;
+    }
+}
+.top-sellers__link{
+    padding: 16px 10px;
+    display: block;
+    background-color: $green;
+    color: #fff;
+    @include f500;
+    text-align: center;
+}
+.products-page__content{
+    width: 100%;
+    .products-page__items{
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 30px;
+        flex-wrap: wrap;
+    }
+    .products__item{
+        max-width: 270px;
+        &-img{
+            min-height: 180px;
+        }
+        &-content{
+            padding: 10px 20px;
+        }
+        &-title{
+            font-size: 16px;
+        }
+        &-info{
+            min-height: 65px;
+            padding: 10px 20px;
+        }
+        .rate-star{
+            margin-right: 5px;
+        }
+        .jq-ry-container{
+            padding: 0;
+        }
+    }
+}
+.products-page__filter{
+    background-color: #fff;
+    border: 1px solid #dedede;
+    margin-bottom: 30px;
+    padding: 0 20px;
+    height: 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    button{
+        cursor: pointer;
+        background-color: transparent;
+        border: none;
+        font-size: 16px;
+        color: #90a4ae;
+        &.active{
+            color: $green;
+        }
+    }
+}
+.products-page__filter-sort{
+    color: #707070;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+}
+button.icon-sort-amount-desc{
+    font-size: 18px;
+    color: #455a64;
+}
+button.icon-unsorted{
+    font-size: 14px;
+    color: #707070;
+}
+.pagination__list{
+    li{
+        display: inline-block;
+        
+    }
+    & + li{
+        margin-left: 6px;
+    }
+    a,
+    span{
+        box-shadow: 0px 1px 2px 0px rgba(205, 214, 222, 0.75);
+        width: 43px;
+        height: 38px;
+        background-color: #fff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 16px;
+        @include f500;
+        color: $bg-blue;
+        &.active{
+            background-color: $red;
+            color: #fff;
+        }
+    }
+}
+
+
+//end products-page
