--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -3,6 +3,8 @@ $red: #e74c3c;
 $green: #8bc34a;
 $bg-blue: #263238;
 $gray: #f4f6f5;
+$orange: #ef6c00;
+$yellow: #fcb322;
 
 @mixin f500 {
     font-family: 'Roboto', sans-serif;
