--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1554,13 +1554,15 @@ button.icon-unsorted{
 //start page-404
 
 .page-404__wrapper,
-.about__wrapper{
+.about__wrapper,
+.contact__wrapper{
     border: 1px solid #dcdcdc;
     background-color: #fff;
     margin-bottom: 150px;
 }
 .page-404__head,
-.about__head{
+.about__head,
+.contact__head{
     font-size: 24px;
     color: #444;
     @include f500;
@@ -1633,6 +1635,122 @@ button.icon-unsorted{
 
 //end about
 
+//start contacts
+
+.contact__head{
+    padding-left: 40px;
+    padding-right: 40px;
+}
+.contact__inner{
+    padding: 35px 40px 15px;
+}
+.contact__map{
+    margin-bottom: 50px;
+    iframe{
+        width: 100%;
+        height: 415px;
+    }
+}
+.contact__box{
+    display: flex;
+}
+.contact__info{
+    margin-right: 30px;
+    max-width: 330px;
+    width: 100%;
+    &-item{
+        margin-bottom: 30px;
+    }
+    &-title{
+        padding-bottom: 20px;
+        position: relative;
+        font-size: 20px;
+        @include f500;
+        color: $bg-blue;
+        padding-left: 40px;
+        margin-bottom: 20px;
+        &::before{
+            content: "\f041";
+            font-family: 'icomoon';
+            color: $green;
+            font-size: 24px;
+            position: absolute;
+            left: 0;
+        }
+        &::after{
+            content: "";
+            position: absolute;
+            width: 44px;
+            height: 4px;
+            background-color: $green;
+            left: 40px;
+            bottom: 0;
+        }
+    }
+    .phone::before{
+        content: "\f095";
+    }
+    .e-mail::before{
+        content: "\f003";
+    }
+    &-content{
+        padding-left: 40px;
+        color: #707070;
+        max-width: 230px;
+    }
+}
+.contact__form{
+    width: 100%;
+    input{
+        border: none;
+        height: 43px;
+        padding: 15px;
+        background-color: #f1f4f5;
+        width: 350px;
+        margin-bottom: 30px;
+        &::placeholder{
+            font-size: 15px;
+            color: #7a7a7a;
+        }
+    }
+    textarea{
+        padding: 15px;
+        border: none;
+        background-color: #f1f4f5;
+        height: 190px;
+        width: 100%;
+        display: block;
+        resize: none;
+        margin-bottom: 23px;
+        &::placeholder{
+            font-size: 15px;
+            color: #7a7a7a;
+        }
+    }
+    button{
+        border: none;
+        background-color: $green;
+        font-size: 16px;
+        text-transform: uppercase;
+        text-align: center;
+        color: #fff;
+        @include f700;
+        padding: 20px 25px;
+        width: 190px;
+    }
+}
+.contact__form-title{
+    font-size: 24px;
+    @include f500;
+    margin-bottom: 25px;
+    color: #333;
+}
+.contact__form-row{
+    display: flex;
+    justify-content: space-between;
+}
+
+//end contacts
 
 
 @import 'media';
