--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1751,6 +1751,293 @@ button.icon-unsorted{
 }
 
 //end contacts
+//start settings
+
+.settings{
+    padding-bottom: 100px;
+}
+.product-one__tabs.settings__tabs{
+    display: flex;
+    .tabs{
+        max-width: 270px;
+        width: 100%;
+        margin-right: 30px;
+        border: 1px solid #dedede;
+        border-bottom: none;
+        text-align: left;
+        display: block;
+        height: 100%;
+        span{
+            display: block;
+            background-color: #fff;
+            border-bottom: 1px solid #dedede;
+            padding: 17px 17px 17px 50px;
+            color: #707070;
+            font-size: 14px;
+            @include f500;
+            &.active{
+                border-bottom: 1px solid $green;
+                color: #37474f;
+                &::before{
+                    color: $green;
+                }
+            }
+            &::before{
+                left: 24px;
+                color: #444;
+            }
+        }
+    }
+    .tabs .tab + .tab{
+        border-left: none;
+    }
+    .tab_content{
+        width: 100%;
+        padding: 0;
+        border: none;
+        background-color: transparent;
+    }
+}
+.page-box{
+    border: 1px solid #dedede;
+    background-color: #fff;
+    &__title{
+        border-bottom: 1px solid #dedede;
+        padding: 18px 34px;
+        @include f500;
+        font-size: 24px;
+        color: $bg-blue;
+    }
+}
+.page-box__content{
+    padding: 30px 35px 80px;
+    position: relative;
+    button{
+        position: absolute;
+        bottom: 34px;
+        left: 293px;
+        width: 110px;
+        height: 45px;
+        background-color: $green;
+        color: #fff;
+        @include f500;
+        text-align: center;
+        padding: 0 10px;
+        cursor: pointer;
+        border: none;
+    }
+}
+.settings__line{
+    margin-bottom: 21px;
+    display: flex;
+    align-items: center;
+    label{
+        color: #444;
+        width: 260px;
+    }
+    input{
+        max-width: 540px;
+        width: 100%;
+        background-color: #f9f9f9;
+        height: 40px;
+        color: #000;
+        border: 1px solid #dedede;
+        padding: 0 10px;
+    }
+    select{
+        max-width: 540px;
+        width: 100%;
+        background-color: #f9f9f9;
+        height: 40px;
+        color: #707070;
+        border: 1px solid #dedede;
+        padding: 0 10px;
+    }
+}
+
+//end settings
+
+//start profile
+
+.profile__inner{
+    display: flex;
+    margin-bottom: 30px;
+}
+.profile__aside{
+    margin-right: 30px;
+    max-width: 270px;
+    width: 100%;
+    .aside-item{
+        margin-bottom: 35px;
+    }
+}
+.profile__content{
+    width: 100%;
+}
+.profile-status{
+    padding: 6px 9px 5px 30px;
+    font-size: 13px;
+    border: 1px solid #d6d6d6;
+    color: #707070;
+    position: relative;
+    &::before{
+        position: absolute;
+        content: "";
+        left: 11px;
+        top: 13px;
+        width: 9px;
+        height: 9px;
+        border-radius: 50%;
+    }
+}
+.profile-on{
+    &::before{
+        background-color: $green;
+    }
+}
+.profile-off{
+    &::before{
+        background-color: $red;
+    }
+}
+.profile__aside-btn{
+    margin-bottom: 13px;
+    text-align: center;
+}
+.profile__aside-message,
+.profile__aside-following{
+    display: block;
+    width: 100%;
+    font-size: 16px;
+    color: #fff;
+    @include f500;
+    padding: 18px 10px;
+    margin-bottom: 17px;
+    position: relative;
+    background-color: $text;
+    box-shadow: 0px 1px 2px 0px rgba(69, 90, 100, 0.75);
+    &::before{
+        content: "\f003";
+        font-family: 'icomoon';
+        position: absolute;
+        left: 50px;
+        top: 17px;
+    }
+}
+.profile__aside-following{
+    @include f700;
+    background-color: $green;
+    &::before{
+        content: "";
+    }
+}
+.profile__banner{
+    padding: 20px;
+    border: 1px solid #dedede;
+    background-color: #fff;
+    margin-bottom: 35px;
+}
+.profile__banner-images{
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 332px;
+}
+.profile__items{
+    display: flex;
+    border: 1px solid #dedede;
+}
+.profile__item{
+    width: 25%;
+    background-color: #fff;
+    text-align: center;
+    padding: 20px 5px 17px;
+    @include f500;
+    font-size: 14px;
+    & + .profile__item{
+        border-left: 1px solid #dedede;
+    }
+    &-title{
+        color: $bg-blue;
+    }
+    &-content{
+        color: #707070;
+    }
+    .profile__item-content.profile__item-sales{
+        color: $bg-blue;
+    }
+}
+.profile-settings{
+    .product-one__tabs.settings__tabs{
+        .tabs span{
+            font-family: 'Roboto', sans-serif !important;
+            font-weight: 500;
+            color: #707070;
+            position: relative;
+            &::before{
+                font-family: 'icomoon';
+                color: #707070;
+                position: absolute;
+                left: 25px;
+                top: 15px;
+            }
+        }
+        .tabs span.active{
+            color: $bg-blue;
+            &::before{
+                color: $green;
+            }
+        }
+    }
+}
+.personal-box{
+    background-color: #fff;
+    padding: 35px 40px 25px;
+    border: 1px solid #dedede;
+}
+.personal-box__title{
+    margin-bottom: 25px;
+    font-size: 20px;
+    @include f700;
+    color: $bg-blue;
+}
+.personal-box__text{
+    margin-bottom: 20px;
+    p{
+        color: #707070;
+    }
+}
+.personal-box__item-head{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 16px;
+}
+.personal-box__item-name{
+    @include f500;
+    font-size: 16px;
+    color: $bg-blue;
+    font-style: italic;
+}
+.personal-box__item-number{
+    font-size: 16px;
+    color: $bg-blue;
+    @include f700;
+}
+.personal-box__item-line{
+    background-color: #f4f4f4;
+    height: 15px;
+    border-radius: 3px;
+    margin-bottom: 23px;
+    span{
+        display: block;
+        border-radius: 3px;
+        height: 15px;
+        background-image: url(../images/pro-bar.jpg);
+        background-repeat: repeat;
+    }
+}
+
+//end profile
 
 
 @import 'media';
