--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2187,5 +2187,98 @@ button.icon-unsorted{
 
 //end upload
 
+//start withdrawals
+
+.withdrawals__inner{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 110px;
+}
+.withdrawals__col{
+    max-width: 570px;
+    width: 100%;
+    background-color: #fff;
+    border: 1px solid #dedede;
+    height: 100%;
+}
+.withdrawals__title{
+    font-size: 24px;
+    @include f500;
+    padding: 18px 32px 24px;
+    border-bottom: 1px solid #dedede;
+    margin-bottom: 30px;
+    color: $bg-blue;
+}
+.withdrawals__content{
+    padding-left: 35px;
+    padding-right: 40px;
+    button{
+        margin-bottom: 50px;
+        color: #fff;
+        background-color: $green;
+        border: none;
+        padding: 15px 36px;
+        cursor: pointer;
+    }
+}
+.withdrawal__form-line{
+    margin-bottom: 25px;
+    label{
+        display: block;
+        width: 100%;
+        @include f500;
+        font-size: 16px;
+        margin-bottom: 15px;
+        color: $bg-blue;
+        span{
+            color: $green;
+        }
+    }
+    input{
+        width: 100%;
+        padding: 0 18px;
+        display: block;
+        background-color: #f9f9f9;
+        height: 40px;
+        border: 1px solid #dedede;
+        &::placeholder{
+            color: #707070;
+        }
+    }
+}
+.withdrawals__content-items{
+    padding-bottom: 35px;
+}
+.withdrawals__content-item{
+    display: flex;
+    height: 42px;
+    align-items: center;
+    font-size: 13px;
+    @include f500;
+    color: #444;
+    &:nth-child(odd){
+        background-color: #f9f9f9;
+    }
+}
+.withdrawals__content-date{
+    width: 154px;
+    padding-left: 20px;
+}
+.withdrawals__content-email{
+    width: 180px;
+}
+.withdrawals__content-price{
+    width: 70px;
+    @include f700;
+}
+.withdrawals__content-status{
+    width: 88px;
+    @include f700;
+    &.withdrawals__content-paid{
+        color: $green;
+    }
+ } 
+//end withdrawals
+
 
 @import 'media';
