--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -9,8 +9,6 @@ html{
 html,
 body{
     height: 100%;
-    position: relative;
-    overflow-x: hidden;
 }
 a{
     display: inline-block;
@@ -28,6 +26,9 @@ body{
     font-size: 15px;
     line-height: 24px;
     color: $text;
+    position: relative;
+    overflow-x: hidden;
+    min-width: 320px;
 }
 .wrapper{
     display: flex;
@@ -62,6 +63,7 @@ body{
     line-height: 60px;
     text-align: center;
     margin-bottom: 30px;
+    animation-duration: 2s;
 }
 .rate-star{
     display: inline-block;
