--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -8,7 +8,6 @@
     background-color: #fff;
     &__top{
         position: relative;
-        overflow-x: hidden;
     }
 }
 .header__top-inner{
@@ -182,6 +181,7 @@
     height: 0;
     overflow: hidden;
     transition: all .3s;
+    z-index: 1;
     a{
         font-size: 12px;
         color: #546e7a;
